--- a/Arrow website/index.html
+++ b/Arrow website/index.html
@@ -88,7 +88,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 
 </ul>
 
-<span style="float:right;"><img src="images/header/tel.png"></span>
+<span style="float:right; margin-top: -30px;"><img src="images/header/tel.png"></span>
 
 
 
