--- a/Arrow website/contactus.html
+++ b/Arrow website/contactus.html
@@ -91,7 +91,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 <ul id="menu">
 
     <li style="margin-top:-0px; margin-right: 25px;"><img src="images/header/arrow_logo.png"></li>
-    <li><a href='home.html'>HOME</a></li>
+    <li><a href='index.html'>HOME</a></li>
     <li><a href='news.html'>NEWS</a></li>
     <li><a href='#' >PRODUCTS</a>
     
@@ -139,7 +139,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 
 </ul>
 
-<span style="float:right;"><img src="images/header/tel.png"></span>
+<span style="float:right; margin-top:-30px;"><img src="images/header/tel.png"></span>
 <!---->
       
     </header>
