--- a/Arrow website/package_designerseries_2.html
+++ b/Arrow website/package_designerseries_2.html
@@ -73,7 +73,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		<ul id="menu">
 
 			<li style="margin-top:-0px; margin-right: 25px;"><img src="images/header/arrow_logo.png"></li>
-			<li><a href='home.html'><span class="r_hover">HOME</span></a></li>
+			<li><a href='index.html'><span class="r_hover">HOME</span></a></li>
 			<li><a href='news.html'>NEWS</a></li>
 			<li><a href='#' >PRODUCTS</a>
 			
@@ -117,7 +117,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 
 		</ul>
 
-		<span style="float:right;"><img src="images/header/tel.png"></span>
+		<span style="float:right; margin-top:-30px;"><img src="images/header/tel.png"></span>
 
 		<!---->
       
