--- a/Arrow website/stores.html
+++ b/Arrow website/stores.html
@@ -119,13 +119,14 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		</td>
 	</tr>
 	</table>	
-		<p align="center">
-			<img src="images/store/swipe circle.png" /> <img src="images/store/swipe grey.png" />
-		</p>	 
-
-       
-
+		
 	</section>
+	
+	<div><p align="center">
+			<img src="images/store/swipe circle.png" style="padding-right:5px;" /> 
+			<img src="images/store/swipe grey.png" />
+		</p>	 
+	</div>
      <div class="copyright"> <span style=" color:#cb1010">ARROW</span> <a href="http://arrowhomeinc.com/" target="_blank">Home Improvement, Inc. (c) 2013</a></div>
     
     <div class="designby">Design:<a href="http://liquidandliquid.com/" target="_blank">liquid and liquid CREATIONS</a></div>
