--- a/Arrow website/ecovative_options.html
+++ b/Arrow website/ecovative_options.html
@@ -26,6 +26,9 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 #hiddenoption {
 	display: none;
 }
+#hiddenoption1 {
+	display: none;
+}
 
 
 
