--- a/Arrow website/package_designerseries.html
+++ b/Arrow website/package_designerseries.html
@@ -230,13 +230,11 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 							</td>
 						</tr>
 						<tr>
-							<td>						
-								<img src="images/DesignSeries/boxicon.png" style=""  >	
+							<td><a href="package_ecovative.html"><img src="images/DesignSeries/boxicon.png" style=""  ></a>	
 							</td>
 						</tr>					
 						<tr>
-							<td>						
-								<img src="images/DesignSeries/toileticon.png" style=""  >	
+							<td><img src="images/DesignSeries/toileticon.png" style=""  >	
 							</td>
 							<td>
 								<h6 style="position: absolute;top: 415px; left: 90px; font-size: 10px; color: white" >Design Series </h6>
