--- a/Arrow website/package_designerseries_2.html
+++ b/Arrow website/package_designerseries_2.html
@@ -229,8 +229,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 							</td>
 						</tr>
 						<tr>
-							<td>						
-								<img src="images/DesignSeries/boxicon.png" style=""  >	
+							<td><a href="package_ecovative.html"><img src="images/DesignSeries/boxicon.png" style=""  ></a>	
 							</td>
 						</tr>					
 						<tr>
