--- a/Arrow website/package_ecovative.html
+++ b/Arrow website/package_ecovative.html
@@ -143,13 +143,11 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 							</td>
 						</tr>
 						<tr>
-							<td colspan="2">						
-								<img src="images/Ecovative/Package.png" >	
+							<td colspan="2"><img src="images/Ecovative/Package.png" >	
 							</td>
 						</tr>
 						<tr valign="top">
-							<td id="toilet">						
-								<img src="images/Ecovative/Toilet.png" >
+							<td id="toilet"><a href="package_designerseries.html"><img src="images/Ecovative/Toilet.png" ></a>
 							</td>
 							<td id="hiddenoption" style="padding-left: 30px; padding-top: 28px; color: white; font-family: 'calibri'; font-size: 14px; background: url('images/Ecovative/Option Box.png') no-repeat; width: 256px; height: 213px;">		
 								<label style="display: block;">Design Series</label>
