--- a/Arrow website/stores.html
+++ b/Arrow website/stores.html
@@ -110,7 +110,11 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		<td>
 			<!--<div class='item cols-map brw_box map'> -->
 			
-			<p style="text-align: right;"><iframe width="482" height="192" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com.ph/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Bonifacio+Global+City,+Taguig+City,+Metro+Manila&amp;aq=0&amp;oq=Bonifagio&amp;sll=14.591921,121.059819&amp;sspn=0.007019,0.009012&amp;ie=UTF8&amp;hq=&amp;hnear=Fort+Bonifacio,+Taguig+City,+Metro+Manila&amp;t=m&amp;z=14&amp;ll=14.553006,121.05213&amp;output=embed"></iframe></p>
+			<p style="text-align: right;">
+				<div style="width: 500px; height: 220px; background-image: url('images/store/map shadow2.png'); background-repeat: no-repeat; background-position: center bottom;">
+					<iframe width="482" height="192" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" style="margin-left: auto; margin-right: auto;" src="https://maps.google.com.ph/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Bonifacio+Global+City,+Taguig+City,+Metro+Manila&amp;aq=0&amp;oq=Bonifagio&amp;sll=14.591921,121.059819&amp;sspn=0.007019,0.009012&amp;ie=UTF8&amp;hq=&amp;hnear=Fort+Bonifacio,+Taguig+City,+Metro+Manila&amp;t=m&amp;z=14&amp;ll=14.553006,121.05213&amp;output=embed"></iframe>
+				</div>
+			</p>
 				<p style="text-align: right;">
 					<img src="images/store/Arrow icon logo.png" style="text-align: right; padding-top: 5px;" />
 					<span style="font-size:14px; padding-left:10px; font-family:Verdana, Geneva, sans-serif; color: gray; text-align: right;">Bonifacio Global City</span>
