--- a/Arrow website/package_designerseries.html
+++ b/Arrow website/package_designerseries.html
@@ -417,7 +417,7 @@ $(document).ready(function(){
 		$("#popupnotify").show();
 	});
 
-	$('.-overlay').click(function(){
+	$('.fancybox-overlay').click(function(){
 		$("#popupnotify").hide();
 	});
 });
