--- a/Arrow website/ecovative_options.html
+++ b/Arrow website/ecovative_options.html
@@ -38,6 +38,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 #hiddenoption4 {
 	display: none;
 }
+
 </style>
 
 </head>
@@ -219,10 +220,9 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 			
 			<tr>
 				<td colspan="4" align="center">
-					<a href="package_ecovative.html"><img src="images/Ecovative/swipe circle.png" style="padding-left: 5px;"  ></a>
+					<a href="package_ecovative.html"><span id="swipe1"><img src="images/Ecovative/swipe circle.png" style="padding-left: 5px;"  ></span></a>
 					<img src="images/Ecovative/swipe grey.png" style="padding-left: 5px;"  >
-					<img src="images/Ecovative/swipe grey.png" style="padding-left: 5px;"  >
-				</td>
+					</td>
 			</tr>
 			
 		</table>
