--- a/Arrow website/package_ecovative.html
+++ b/Arrow website/package_ecovative.html
@@ -26,7 +26,9 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 #hiddenoption {
 	display: none;
 }
-
+#toileticon {
+	display: none;
+}
 
 
 
@@ -148,6 +150,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 						</tr>
 						<tr valign="top">
 							<td id="toilet"><a href="package_designerseries.html"><img src="images/Ecovative/Toilet.png" ></a>
+                            <td id="toileticon"><a href="package_designerseries.html"><img src="images/Ecovative/toileticon.png" ></a>
 							</td>
 							<td id="hiddenoption" style="padding-left: 30px; padding-top: 28px; color: white; font-family: 'calibri'; font-size: 14px; background: url('images/Ecovative/Option Box.png') no-repeat; width: 256px; height: 213px;">		
 								<label style="display: block;">Design Series</label>
@@ -208,9 +211,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		</table>
 
 				<p align="center">
-					<a href="ecovative_options.html"><img src="images/Ecovative/swipe circle.png" style="padding-left: 5px;"  >
 					<img src="images/Ecovative/swipe grey.png" style="padding-left: 5px;"  >
-					<img src="images/Ecovative/swipe grey.png" style="padding-left: 5px;"  >
+					<a href="ecovative_options.html"><span id="swipe2"><img src="images/Ecovative/swipe circle.png" style="padding-left: 5px;"  ></a>
 				</p>
 <header>
 <div class='wrap'>
