--- a/Arrow website/ecovative_options.html
+++ b/Arrow website/ecovative_options.html
@@ -136,7 +136,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		<!--<table style="width: 100%; height: 450px;">-->
 		<table style="width: 100%;">
 			<tr valign="top">
-				<td style="width: 30%; padding-top: 100px;" >
+				<td style="width: 30%; padding-top: 200px;" >
 					<table >
 						<tr>
 							<td colspan="2">
@@ -220,18 +220,28 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 			
 			<tr>
 				<td colspan="4" align="center">
-					<a href="package_ecovative.html"><span id="swipe1"><img src="images/Ecovative/swipe circle.png" style="padding-left: 5px;"  ></span></a>
-					<img src="images/Ecovative/swipe grey.png" style="padding-left: 5px;"  >
+					
 					</td>
 			</tr>
-			
 		</table>
-
-
-
-
-		
 	</div>	
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div><div>&nbsp;</div>
+	<div><a href="package_ecovative.html"><span id="swipe1" style="margin-left:800px";><img src="images/Ecovative/swipe circle.png" style="padding-left: 5px; margin-bottom: 35px;"  ></span></a>
+					<img src="images/Ecovative/swipe grey.png" style="padding-left: 5px; margin-bottom: 35px;"  ></div>
+	
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
 <header>
 <div class='wrap'>
     <div class="copyright"> <span style=" color:#cb1010">ARROW</span> <a href="http://arrowhomeinc.com/" target="_blank">Home Improvement, Inc. (c) 2013</a></div>
