--- a/Arrow website/stores.html
+++ b/Arrow website/stores.html
@@ -131,6 +131,16 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 			<img src="images/store/swipe grey.png" />
 		</p>	 
 	</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
      <div class="copyright"> <span style=" color:#cb1010">ARROW</span> <a href="http://arrowhomeinc.com/" target="_blank">Home Improvement, Inc. (c) 2013</a></div>
     
     <div class="designby">Design:<a href="http://liquidandliquid.com/" target="_blank">liquid and liquid CREATIONS</a></div>
