--- a/Arrow website/package_ecovative.html
+++ b/Arrow website/package_ecovative.html
@@ -214,6 +214,12 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 					<img src="images/Ecovative/swipe grey.png" style="padding-left: 5px;"  >
 					<a href="ecovative_options.html"><span id="swipe2"><img src="images/Ecovative/swipe circle.png" style="padding-left: 5px;"  ></a>
 				</p>
+		
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div>
+	<div>&nbsp;</div><div>&nbsp;</div>
 <header>
 <div class='wrap'>
     <div class="copyright"> <span style=" color:#cb1010">ARROW</span> <a href="http://arrowhomeinc.com/" target="_blank">Home Improvement, Inc. (c) 2013</a></div>
@@ -273,6 +279,7 @@ $(document).ready(function(){
 		$('#hiddenoption').show();
 		}, function() {
 		$('#hiddenoption').hide();
+		$('#hiddenoption').hide();
 	});
 
 	$('#hiddenoption').hover(function() {
@@ -281,6 +288,7 @@ $(document).ready(function(){
 		$('#hiddenoption').hide();
 	});	
 
+	
 	$('#savewater').hover(function() {
 		$(this).attr('src', 'images/Ecovative/Ecovative Main Page/Save Water(Hover).png');
 		$('#savewatercaption').show();
@@ -290,7 +298,7 @@ $(document).ready(function(){
 	});	
 
 	$('#saveresources').hover(function() {
-		$(this).attr('src', 'images/Ecovative/Ecovative Main Page/Save(Hover).png');
+		$(this).attr('src', 'images/Ecovative/Ecovative Main Page/Save Resources (Hover).png');
 		$('#saveresourcescaption').show();
 		}, function() {
 		$(this).attr('src', 'images/Ecovative/Ecovative Main Page/Save Resources.png');
@@ -303,7 +311,7 @@ $(document).ready(function(){
 		}, function() {
 		$(this).attr('src', 'images/Ecovative/Ecovative Main Page/Save the Earth.png');
 		$('#saveearthcaption').hide();
-	});		
+	});	
 });
 </script>
 
