--- a/Arrow website/package_designerseries.html
+++ b/Arrow website/package_designerseries.html
@@ -69,6 +69,15 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 	#toileticonbig {
 		display: none;
 	}
+	#puds2a {
+		display: none;
+	}
+	#puds2b {
+		display: none;
+	}
+	#puds2c {
+		display: none;
+	}
 
 
 
@@ -207,6 +216,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 			<img id= "colors1" src="images/DesignSeries/swipe grey.png" style="position: absolute; bottom: 101px; left: 199px; z-index: 5;" >
 			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >BATHRUB - AK170 </h4>		
 			<img id="whitetoilet" src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/1/White Toilet.png" style="position: absolute; left: 109px;">
+			<img id="puds2a" src="images/DesignSeries/4.png" style="position: absolute; left: 109px;">
 			
 <!--OTHER COLORS FOR IMAGE-->
 
@@ -238,7 +248,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/share.png" style="position: absolute; top: 151px; left: 437px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/colours.png" style="position: absolute; bottom: 101px; left: 169px;" >
 			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >BATHRUB - AK170 </h4>		
-			<img src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/6.png" style="position: absolute; left: 55px;">
+			<img id="puds1b" src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/6.png" style="position: absolute; left: 55px;">
+				<img id="puds2b" src="images/DesignSeries/5.png" style="position: absolute; left: 55px;">
 				<div class="description" style="position: absolute; left: 518px; top: 101px; width: 225px;">
 					<h4 style="color: white; font-family: 'calibri'; font-size: 15px;" >Description</h4>
 						<p style="color: white; font-family: 'calibri'; font-size: 15px;">
@@ -263,7 +274,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/share.png" style="position: absolute; top: 151px; left: 437px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/colours.png" style="position: absolute; bottom: 101px; left: 169px;" >
 			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >BATHRUB - AK170 </h4>		
-			<img src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/5.png" style="position: absolute; top: 111px; left: 39px;">
+			<img id="puds1c" src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/5.png" style="position: absolute; top: 111px; left: 39px;">
+			<img id="puds2c" src="images/DesignSeries/6.png" style="position: absolute; top: 111px; left: 39px;">
 				<div class="description" style="position: absolute; left: 518px; top: 101px; width: 225px;">
 					<h4 style="color: white; font-family: 'calibri'; font-size: 15px;" >Description</h4>
 						<p style="color: white; font-family: 'calibri'; font-size: 15px;">
