--- a/Arrow website/package.html
+++ b/Arrow website/package.html
@@ -219,6 +219,11 @@
 	
 	<a class="fancybox" href="#product1" >
 		<img class="avatar" src="images/package/+.png" style="position: absolute; left: 40px; top: 30px;" />
+		<img class="avatar2" src="images/package/+2.png" style="position: absolute; left: 40px; top: 30px;" />
+		<img class="avatar3" src="images/package/+3.png" style="position: absolute; left: 40px; top: 30px;" />
+		<img class="avatar4" src="images/package/+4.png" style="position: absolute; left: 40px; top: 30px;" />
+		<img class="avatar5" src="images/package/+5.png" style="position: absolute; left: 40px; top: 30px;" />
+		<img class="avatar6" src="images/package/+6.png" style="position: absolute; left: 40px; top: 30px;" />
 	</a>
 	
 	
