--- a/Arrow website/package_designerseries.html
+++ b/Arrow website/package_designerseries.html
@@ -215,14 +215,14 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 
 		<div id="product1" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 100px;" >
 			<img src="images/header/Arrow icon logo2.png" style="position: absolute; top:61px; left: 79px;" >
-			<img id="notify" src="images/DesignSeries/Design Series Pop Up/HTML elements/cart.png" style="position: absolute; top: 71px; left: 435px;" alt="BATHRUB - AK170" >
+			<img id="notify" src="images/DesignSeries/Design Series Pop Up/HTML elements/cart.png" style="position: absolute; top: 71px; left: 435px;" alt="TOILET BOWL #1" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/Heart.png" style="position: absolute; top: 114px; left: 439px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/share.png" style="position: absolute; top: 151px; left: 437px;" >
 			
 <!--updated the z-index of colors -->			
 			<img id= "colors" src="images/DesignSeries/swipe circle.png" style="position: absolute; bottom: 101px; left: 169px; z-index: 5;" >
 			<img id= "colors1" src="images/DesignSeries/swipe grey.png" style="position: absolute; bottom: 101px; left: 199px; z-index: 5;" >
-			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >BATHRUB - AK170 </h4>		
+			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >TOILET BOWL #1 </h4>		
 			<img id="whitetoilet" src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/1/White Toilet.png" style="position: absolute; left: 109px;">
 			<img id="puds2a" src="images/DesignSeries/4.png" style="position: absolute; left: 109px;">
 			
@@ -332,7 +332,7 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 						<a class="fancybox" href="#product1" rel='external' style="float: left; margin-top: 5px; margin-left: 22px;" >
                         <span id="ds1a"><img src="images/DesignSeries/1.png" style="float: left; margin-top: 5px; margin-left: 0px;" ></span>
                         <span id="ds2a"><img src="images/DesignSeries/4a.png" style="float: left; margin-top: 5px; margin-left: 0px;" ></span></a>
-						<label class="producticons" style="float: left; margin-top: -346px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Bathrub AK170</label>
+						<label class="producticons" style="float: left; margin-top: -346px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #1</label>
 						<img src="images/product/eye.png" class="producticons" style="float: left; margin-left: 85px; margin-top: 30px;" >
 						<img src="images/product/pushcart.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 30px;" >
 						<img src="images/product/share.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 30px;" >
