--- a/Arrow website/package_designerseries.html
+++ b/Arrow website/package_designerseries.html
@@ -78,6 +78,36 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 	#puds2c {
 		display: none;
 	}
+	#notify2 {
+		display:none;
+	}
+	#notify4 {
+		display:none;
+	}
+	#notify6 {
+		display:none;
+	}
+	#bowltitle2 {
+		display:none;
+	}
+	.producticons {
+		display:none;
+	}
+	.producticons2 {
+		display:none;
+	}
+	.producticons3 {
+		display:none;
+	}
+	.producticons4 {
+		display:none;
+	}
+	.producticons5 {
+		display:none;
+	}
+	.producticons6 {
+		display:none;
+	}
 
 
 
@@ -216,13 +246,15 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		<div id="product1" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 100px;" >
 			<img src="images/header/Arrow icon logo2.png" style="position: absolute; top:61px; left: 79px;" >
 			<img id="notify" src="images/DesignSeries/Design Series Pop Up/HTML elements/cart.png" style="position: absolute; top: 71px; left: 435px;" alt="TOILET BOWL #1" >
+			<img id="notify2" src="images/DesignSeries/Design Series Pop Up/HTML elements/cart2.png" style="position: absolute; top: 71px; left: 435px;" alt="TOILET BOWL #2" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/Heart.png" style="position: absolute; top: 114px; left: 439px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/share.png" style="position: absolute; top: 151px; left: 437px;" >
 			
 <!--updated the z-index of colors -->			
 			<img id= "colors" src="images/DesignSeries/swipe circle.png" style="position: absolute; bottom: 101px; left: 169px; z-index: 5;" >
 			<img id= "colors1" src="images/DesignSeries/swipe grey.png" style="position: absolute; bottom: 101px; left: 199px; z-index: 5;" >
-			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >TOILET BOWL #1 </h4>		
+			<h4 id="bowltitle" style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >TOILET BOWL #1 </h4>
+			<h4 id="bowltitle2" style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >TOILET BOWL #2 </h4>	
 			<img id="whitetoilet" src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/1/White Toilet.png" style="position: absolute; left: 109px;">
 			<img id="puds2a" src="images/DesignSeries/4.png" style="position: absolute; left: 109px;">
 			
@@ -251,11 +283,13 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		
 		<div id="product2" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 100px;" >
 			<img src="images/header/Arrow icon logo2.png" style="position: absolute; top:61px; left: 79px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/cart.png" style="position: absolute; top: 71px; left: 435px;" >
+			<img id="notify3" src="images/DesignSeries/Design Series Pop Up/HTML elements/cart.png" style="position: absolute; top: 71px; left: 435px;" alt="TOILET BOWL #3" >
+			<img id="notify4" src="images/DesignSeries/Design Series Pop Up/HTML elements/cart3.png" style="position: absolute; top: 71px; left: 435px;" alt="TOILET BOWL #4" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/Heart.png" style="position: absolute; top: 114px; left: 439px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/share.png" style="position: absolute; top: 151px; left: 437px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/colours.png" style="position: absolute; bottom: 101px; left: 169px;" >
-			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >BATHRUB - AK170 </h4>		
+			<h4 id="bowltitle3" style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >TOILET BOWL #3 </h4>
+			<h4 id="bowltitle4" style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >TOILET BOWL #4 </h4>	
 			<img id="puds1b" src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/6.png" style="position: absolute; left: 55px;">
 				<img id="puds2b" src="images/DesignSeries/5.png" style="position: absolute; left: 55px;">
 				<div class="description" style="position: absolute; left: 518px; top: 101px; width: 225px;">
@@ -277,11 +311,13 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 		
 		<div id="product3" class="product" style="display: none; width: 544px; margin-left: auto; margin-right: auto; margin-top: 100px;" >
 			<img src="images/header/Arrow icon logo2.png" style="position: absolute; top:61px; left: 79px;" >
-			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/cart.png" style="position: absolute; top: 71px; left: 435px;" >
+			<img id="notify5"src="images/DesignSeries/Design Series Pop Up/HTML elements/cart.png" style="position: absolute; top: 71px; left: 435px;" alt="TOILET BOWL #5">
+			<img id="notify6" src="images/DesignSeries/Design Series Pop Up/HTML elements/cart4.png" style="position: absolute; top: 71px; left: 435px;" alt="TOILET BOWL #6" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/Heart.png" style="position: absolute; top: 114px; left: 439px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/share.png" style="position: absolute; top: 151px; left: 437px;" >
 			<img src="images/DesignSeries/Design Series Pop Up/HTML elements/colours.png" style="position: absolute; bottom: 101px; left: 169px;" >
-			<h4 style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >BATHRUB - AK170 </h4>		
+			<h4 id="bowltitle5" style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >TOILET BOWL #5 </h4>
+			<h4 id="bowltitle6" style="position: absolute;top: 50px; left: 126px; font-size: 15px;" >TOILET BOWL #6 </h4>	
 			<img id="puds1c" src="images/DesignSeries/Design Series Pop Up/Design Pop Up Products/5.png" style="position: absolute; top: 111px; left: 39px;">
 			<img id="puds2c" src="images/DesignSeries/6.png" style="position: absolute; top: 111px; left: 39px;">
 				<div class="description" style="position: absolute; left: 518px; top: 101px; width: 225px;">
@@ -332,7 +368,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 						<a class="fancybox" href="#product1" rel='external' style="float: left; margin-top: 5px; margin-left: 22px;" >
                         <span id="ds1a"><img src="images/DesignSeries/1.png" style="float: left; margin-top: 5px; margin-left: 0px;" ></span>
                         <span id="ds2a"><img src="images/DesignSeries/4a.png" style="float: left; margin-top: 5px; margin-left: 0px;" ></span></a>
-						<label class="producticons" style="float: left; margin-top: -346px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #1</label>
+						<label class="producticons" style="float: left; margin-top: -346px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #1-2</label>
+						<label class="producticons2" style="float: left; margin-top: -346px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #1-2</label>
 						<img src="images/product/eye.png" class="producticons" style="float: left; margin-left: 85px; margin-top: 30px;" >
 						<img src="images/product/pushcart.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 30px;" >
 						<img src="images/product/share.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 30px;" >
@@ -345,7 +382,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 						<a class="fancybox" href="#product2" rel='external' style="float: left; margin-top: 5px; margin-left: 22px;" >
                         <span id="ds1b"><img src="images/DesignSeries/2.png" style="float: left; margin-top: 5px; margin-left: 0px;" ></span>
                         <span id="ds2b"><img src="images/DesignSeries/5a.png" style="float: left; margin-top: -12px; margin-left: 0px;" ></span></a>
-						<label class="producticons" style="float: left; margin-top: -373px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Bathrub AK170</label>
+						<label class="producticons" style="float: left; margin-top: -373px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #3-4</label>
+						<label class="producticons4" style="float: left; margin-top: -373px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #3-4</label>
 						<img src="images/product/eye.png" class="producticons" style="float: left; margin-left: 85px; margin-top: 2px;" >
 						<img src="images/product/pushcart.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 2px;" >
 						<img src="images/product/share.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 2px;" >
@@ -363,7 +401,8 @@ jkmegamenu.definemenu("megaanchor", "megamenu1", "mouseover")
 						<a class="fancybox" href="#product3" rel='external' style="float: left; margin-top: 5px; margin-left: 22px;" >
                         <span id="ds1c"><img src="images/DesignSeries/3.png" style="float: left; margin-top: 5px; margin-left: -13px;" ></span>
                         <span id="ds2c"><img src="images/DesignSeries/6a.png" style="float: left; margin-top: 5px; margin-left: 0px;" ></span></a>
-						<label class="producticons" style="float: left; margin-top: -322px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Bathrub AK170</label>
+						<label class="producticons" style="float: left; margin-top: -322px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #5-6</label>
+						<label class="producticons6" style="float: left; margin-top: -322px; margin-left: 83px; font-family: 'calibri'; font-size: 20px; ">Toilet Bowl #5-6</label>
 						<img src="images/product/eye.png" class="producticons" style="float: left; margin-left: 85px; margin-top: 56px;" >
 						<img src="images/product/pushcart.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 56px;" >
 						<img src="images/product/share.png" class="producticons" style="float: left; margin-left: 27px; margin-top: 56px;" >
@@ -482,6 +521,106 @@ $(document).ready(function(){
 	$('.fancybox-overlay').click(function(){
 		$("#popupnotify").hide();
 	});
+	$("#notify2").click(function(){
+		var ordertext = document.getElementById('ordertext');
+		
+		ordertext.value="I am interested in \n" +
+						$('#notify2').attr('alt');
+		
+		$("#popupnotify").show();
+		
+		
+	});
+	
+	$("#closebutton").click(function(){
+		$("#popupnotify").hide();
+	});
+	
+	
+
+	$('.fancybox-overlay').click(function(){
+		$("#popupnotify").hide();
+	});
+	$("#notify3").click(function(){
+		var ordertext = document.getElementById('ordertext');
+		
+		ordertext.value="I am interested in \n" +
+						$('#notify3').attr('alt');
+		
+		$("#popupnotify").show();
+		
+		
+	});
+	
+	$("#closebutton").click(function(){
+		$("#popupnotify").hide();
+	});
+	
+	
+
+	$('.fancybox-overlay').click(function(){
+		$("#popupnotify").hide();
+	});
+	$("#notify4").click(function(){
+		var ordertext = document.getElementById('ordertext');
+		
+		ordertext.value="I am interested in \n" +
+						$('#notify4').attr('alt');
+		
+		$("#popupnotify").show();
+		
+		
+	});
+	
+	$("#closebutton").click(function(){
+		$("#popupnotify").hide();
+	});
+	
+	
+
+	$('.fancybox-overlay').click(function(){
+		$("#popupnotify").hide();
+	});
+	$("#notify5").click(function(){
+		var ordertext = document.getElementById('ordertext');
+		
+		ordertext.value="I am interested in \n" +
+						$('#notify5').attr('alt');
+		
+		$("#popupnotify").show();
+		
+		
+	});
+	
+	$("#closebutton").click(function(){
+		$("#popupnotify").hide();
+	});
+	
+	
+
+	$('.fancybox-overlay').click(function(){
+		$("#popupnotify").hide();
+	});
+	$("#notify6").click(function(){
+		var ordertext = document.getElementById('ordertext');
+		
+		ordertext.value="I am interested in \n" +
+						$('#notify6').attr('alt');
+		
+		$("#popupnotify").show();
+		
+		
+	});
+	
+	$("#closebutton").click(function(){
+		$("#popupnotify").hide();
+	});
+	
+	
+
+	$('.fancybox-overlay').click(function(){
+		$("#popupnotify").hide();
+	});
 });
 
 function hidediv() {
@@ -498,6 +637,18 @@ $(document).ready(function(){
 		$("#ds1c").fadeOut(10);
 		$("#swipe1").fadeIn(10);
 		$("#swipe2").fadeOut(10);
+		$("#notify2").fadeIn(10);
+		$("#notify").fadeOut(10);
+		$("#bowltitle2").fadeIn(10);
+		$("#bowltitle").fadeOut(10);
+		$("#notify4").fadeIn(10);
+		$("#notify3").fadeOut(10);
+		$("#bowltitle4").fadeIn(10);
+		$("#bowltitle3").fadeOut(10);
+		$("#notify6").fadeIn(10);
+		$("#notify5").fadeOut(10);
+		$("#bowltitle6").fadeIn(10);
+		$("#bowltitle5").fadeOut(10);
 	});
 });
 $(document).ready(function(){
@@ -510,6 +661,18 @@ $(document).ready(function(){
 		$("#ds2c").fadeOut(10);
 		$("#swipe2").fadeIn(10);
 		$("#swipe1").fadeOut(10);
+		$("#notify").fadeIn(10);
+		$("#notify2").fadeOut(10);
+		$("#bowltitle").fadeIn(10);
+		$("#bowltitle2").fadeOut(10);
+		$("#notify3").fadeIn(10);
+		$("#notify4").fadeOut(10);
+		$("#bowltitle3").fadeIn(10);
+		$("#bowltitle4").fadeOut(10);
+		$("#notify5").fadeIn(10);
+		$("#notify6").fadeOut(10);
+		$("#bowltitle5").fadeIn(10);
+		$("#bowltitle6").fadeOut(10);
 	});
 });
 
